--- a/index.html
+++ b/index.html
@@ -105,12 +105,10 @@
     </div>
   </div>
 
-  <!-- ספריות חיצוניות -->
-  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
-  <script src="https://unpkg.com/@walletconnect/ethereum-provider/dist/index.umd.min.js"></script>
-  <!-- מודול הארנק -->
-  <script src="wallet_wc_v2.js"></script>
-  <!-- לוגיקת המשחק -->
-  <script src="script.js"></script>
+  <script src="ethers.min.js"></script>
+<script src="index.umd.min.js"></script>
+<script src="wallet_wc_v2.js"></script>
+<script src="script.js"></script>
+
 </body>
 </html>
