--- a/index.html
+++ b/index.html
@@ -105,10 +105,15 @@
     </div>
   </div>
 
-  <script src="ethers.min.js"></script>
+  <!-- Load WalletConnect v2 UMD from CDN -->
+<script src="https://cdn.jsdelivr.net/npm/@walletconnect/ethereum-provider@2.21.8/dist/index.umd.min.js"></script>
+
+<!-- Existing scripts -->
+<script src="ethers.min.js"></script>
 <script src="index.umd.min.js"></script>
 <script src="wallet_wc_v2.js"></script>
 <script src="script.js"></script>
+
 
 </body>
 </html>
