--- a/index.html
+++ b/index.html
@@ -1,119 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Crypto Hidden Object Game</title>
-  <link rel="icon" href="data:,">
-  <style>
-    /* סגנון ועיצוב המשחק (שכפול התבנית הקודמת) */
-    :root {
-      --bg1: #c2e9fb;
-      --bg2: #a1c4fd;
-      --card: #fff;
-      --text: #333;
-      --primary: #4a90e2;
-      --danger: #f44336;
-    }
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: linear-gradient(135deg, var(--bg1), var(--bg2));
-      color: var(--text);
-    }
-    header { background: var(--primary); color: #fff; text-align: center; padding: 1rem; }
-    #game-card {
-      max-width: 820px; margin: 2rem auto; background: #fff; border-radius: 12px;
-      padding: 1rem 1.25rem; box-shadow: 0 6px 18px rgba(0,0,0,.12);
-    }
-    #hidden-object-area {
-      position: relative; width: 100%; height: 360px; border-radius: 10px;
-      background: linear-gradient(180deg, #83a4d4 0%, #b6fbff 100%);
-      overflow: hidden; margin: .75rem 0 1rem; border: 1px solid #e0e0e0;
-    }
-    .object,.bomb,.bonus,.life-item,.time-item,.boss-star {
-      position: absolute; font-size: 28px; cursor: pointer; user-select: none;
-    }
-    /* אנימציות ודקורציה לכוכבים, פצצות ופריטים */
-    .object { color: #ffd54f; filter: drop-shadow(0 0 6px #ffd54f); animation: pulse 2s infinite; }
-    .bomb   { color: #f44336; animation: shake .6s infinite; }
-    .bonus  { color: #ffc107; animation: bounce 1.4s infinite; filter: drop-shadow(0 0 4px #ffc107); }
-    .life-item { color: #e91e63; animation: bounce 1.7s infinite; }
-    .time-item { color: #00bcd4; animation: bounce 1.6s infinite; }
-    .boss-star { color: #ffd700; font-size: 40px; animation: pulse 1.1s infinite; }
-    @keyframes pulse { 0%{transform:scale(1)} 50%{transform:scale(1.18)} 100%{transform:scale(1)} }
-    @keyframes bounce { 0%,100%{transform:translateY(0)} 50%{transform:translateY(-6px)} }
-    /* חלקיקים ברקע וניצוצות */
-    .particle { position: absolute; width: 3px; height: 3px; border-radius: 50%;
-      background: rgba(255,255,255,.6); filter: blur(1px);
-      animation: fall 4s linear forwards; }
-    @keyframes fall { 0%{ transform:translateY(-10px); opacity:.9 } 100%{ transform:translateY(380px); opacity:0 } }
-    .spark { position: absolute; width: 8px; height: 8px; background: #ffd700; border-radius: 50%;
-      opacity: .9; animation: spark .6s forwards; }
-    @keyframes spark { 0%{ transform:scale(1); opacity:1 } 100%{ transform:scale(.1); opacity:0 } }
-
-    #score-bar { font-weight: 700; margin: .25rem 0; }
-    #progress-container { width: 100%; height: 12px; background: #e0e0e0; border-radius: 7px;
-      overflow: hidden; margin: .25rem 0 .6rem; }
-    #progress-bar { height: 100%; width: 100%; background: #4caf50; transition: width .25s linear, background .25s linear; }
-    #controls button { margin: .25rem; padding: .5rem 1rem; border: none; border-radius: 6px; background: #ddd;
-      font-weight: 600; cursor: pointer; }
-    #controls .danger { background: var(--danger); color: #fff; }
-    .dark-mode { background: linear-gradient(135deg, #111827, #1f2937); color: #f5f5f5; }
-    .dark-mode #game-card { background: #1f2937; color: #f5f5f5; }
-  </style>
+    <meta charset="UTF-8">
+    <title>Crypto Hidden Object Game</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(to bottom, #2b6cb0, #90cdf4);
+            color: #fff;
+        }
+        .container {
+            max-width: 600px;
+            margin: 80px auto;
+            background: #fff;
+            color: #333;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+            text-align: center;
+        }
+        .container h1 { margin-top: 0; }
+        .controls { margin: 20px 0; }
+        .controls select, .controls button {
+            margin-right: 10px;
+            padding: 6px 10px;
+        }
+        #wallet-address, #wallet-balance {
+            margin-top: 10px;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-  <header><h1>Crypto Hidden Object Game</h1></header>
-  <div id="game-card">
-    <!-- START SCREEN -->
-    <div id="start-screen">
-      <p>Choose difficulty & theme, connect your wallet (optional), then start.</p>
-      <label>Difficulty:</label>
-      <select id="difficulty-select">
-        <option>Easy</option><option selected>Normal</option><option>Hard</option>
-      </select>
-      <label>&nbsp;Theme:</label>
-      <select id="theme-select">
-        <option value="default" selected>Classic</option><option value="dream">Dream</option>
-      </select><br>
-      <button id="connect-wallet">Connect Wallet</button>
-      <button id="start-game">Start Game</button>
-      <div id="wallet-address"></div>
-      <div id="balance-display"></div>
-      <div id="best-stats"></div>
+    <div class="container">
+        <h1>Crypto Hidden Object Game</h1>
+        <div class="controls">
+            Difficulty:
+            <select id="difficulty">
+                <option value="normal">Normal</option>
+                <option value="hard">Hard</option>
+            </select>
+            Theme:
+            <select id="theme">
+                <option value="classic">Classic</option>
+                <option value="space">Space</option>
+            </select>
+            <button id="connect-wallet-btn">Connect Wallet</button>
+            <button id="start-game-btn">Start Game</button>
+            <div id="wallet-address"></div>
+            <div id="wallet-balance"></div>
+        </div>
+        <!-- Game canvas and other elements would go here -->
     </div>
-
-    <!-- GAME SCREEN -->
-    <div id="game-screen" style="display:none">
-      <div id="score-bar">
-        <span id="level-info">Level: 1</span> |
-        <span id="coins-display">Coins: 5</span> |
-        <span id="lives-info">Lives: 3</span> |
-        <span id="highest-info">Highest: 0</span>
-      </div>
-      <div id="progress-container"><div id="progress-bar"></div></div>
-      <div id="hidden-object-area"></div>
-      <div id="controls">
-        <button id="hint-button">Hint (1)</button>
-        <button id="reveal-button">Reveal (3)</button>
-        <button id="pause-button">Pause</button>
-        <button id="darkmode-button">Dark Mode</button>
-        <button id="reset-button" class="danger">Reset</button>
-      </div>
-      <div id="game-message"></div>
-    </div>
-  </div>
-
-  <!-- Load WalletConnect v2 UMD from CDN -->
-<script src="https://cdn.jsdelivr.net/npm/@walletconnect/ethereum-provider@2.21.8/dist/index.umd.min.js"></script>
-
-<!-- Existing scripts -->
-<script src="ethers.min.js"></script>
-<script src="index.umd.min.js"></script>
-<script src="script.js"></script>
-<script src="wallet_wc_v2.js"></script>
-
-
+    <!-- Load ethers.js from CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
+    <!-- Load our wallet integration scripts -->
+    <script src="wallet_eth_integration_updated.js"></script>
+    <script src="wallet_wc_v2.js"></script>
+    <!-- Load the main game logic -->
+    <script src="script.js"></script>
+    <script>
+        // Hook up buttons to wallet integration
+        document.getElementById('connect-wallet-btn').addEventListener('click', async () => {
+            const result = await window.connectCryptoWallet();
+            if (result) {
+                console.log('Wallet connected:', result);
+            }
+        });
+        document.getElementById('start-game-btn').addEventListener('click', () => {
+            // Start game logic here
+        });
+    </script>
 </body>
 </html>
